# gameboy_emulator

./: .gitignore  Cargo.toml  README.md  justfile  layout.kdl
frontend/: package-lock.json
frontend/src/: index.tsx
frontend/web/: index.html  package-lock.json  package.json
frontend/web/src/: App.tsx  index.tsx
gameboy_emulator/: Cargo.toml
gameboy_emulator/src/: args.rs  main.rs
gameboy_emulator_lib/: Cargo.toml
gameboy_emulator_lib/src/: bus.rs  cartridge.rs  cpu.rs  emu.rs  gameboy.rs  interrupt.rs  io.rs  lib.rs  rom.rs  timer.rs  utils.rs
gameboy_emulator_lib/src/bus/: ranges.rs
gameboy_emulator_lib/src/cartridge/: header.rs
gameboy_emulator_lib/src/cpu/: operation.rs  registers.rs
gameboy_emulator_lib/src/cpu/operation/: alu16_handlers.rs  alu8_handlers.rs  bit_handlers.rs  jump_handlers.rs  load16_handlers.rs  load8_handlers.rs  misc_handlers.rs  opcodes.rs
gameboy_emulator_lib/src/cpu/registers/: flags.rs
gameboy_emulator_lib/src/io/: joypad.rs  ppu.rs  serial.rs  timer.rs
gameboy_emulator_lib/src/io/ppu/: fetcher.rs  oam.rs  registers.rs
src/: bin.rs
src/lib/: bus.rs  cartridge.rs  cpu.rs  lib.rs  utils.rs
src/lib/cpu/: instruction.rs  operation.rs  registers.rs
src/lib/cpu/instruction/: handlers.rs  operations.rs  prefixed.rs
src/lib/cpu/instruction/operations/: opcode_macros.rs  opcodes.rs
src/lib/cpu/operation/: bit_handlers.rs  jump_handlers.rs  load16_handlers.rs  load8_handlers.rs  misc_handlers.rs  opcode_macros.rs  opcodes.rs
src/lib/cpu/registers/: flags.rs
